--- a/.inputrc
+++ b/.inputrc
@@ -1,3 +1,9 @@
+$include /etc/inputrc
+
+# Cursor change in vi-mode
 set show-mode-in-prompt on
 set vi-ins-mode-string \1\e[5 q\2
 set vi-cmd-mode-string \1\e[2 q\2
+
+# Case insensitive completion
+set completion-ignore-case On
