--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,9 @@ unbind-key C-b
 bind-key C-s send-prefix
 
 set-option -g default-terminal screen-256color
+set -g mouse on 
+# set -g mouse-select-pane on
+bind-key R source-file ~/.tmux.conf \; display-message "Config reloaded!"
 
-bind-key R source-file ~/.config/tmux/.tmux.conf \; display-message "Config reloaded!"
-
-set-option -g status-style bg=black,fg=white
-set-option -g automatic-rename on
+set-option -g status-style bg=#383F32,fg=white
+# set-option -g automatic-rename on
